--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <div class="logo_text">
             <h2>Fitness</h2>
           </div>
+          <!-- mobile nav start -->
           <div class="mobile_menu">
             <input type="checkbox" id="menu-checkbox" />
             <label for="menu-checkbox" class="menu-icon">
-              <!-- <div class="nav-icon"></div> -->
               <img
                 id="hamburger-icon"
                 src="./images/hamburger-icon.png"
@@ -33,6 +33,7 @@
               </ul>
             </nav>
           </div>
+          <!-- mobile nav end -->
           <nav class="header_nav">
             <a class="active_nav" href="/">Home</a>
             <a href="#">Service</a>
@@ -67,5 +68,36 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="habit_section max_width">
+        <h2 class="section_heading">Change Your Habits</h2>
+        <p>
+          We believe fitness should be accessible to everyone, everywhere,
+          regardless of income or access to a gym.
+        </p>
+        <div class="habit_images">
+          <div class="habit_image">
+            <img src="./images/image 3.png" alt="" />
+            <h3 class="habit_title">Movement</h3>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="habit_image">
+            <img src="./images/image 2.png" alt="" />
+            <h3 class="habit_title">Time</h3>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="habit_image">
+            <img src="./images/image 4.png" alt="" />
+            <h3 class="habit_title">Practice</h3>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="habit_image">
+            <img src="./images/image 5.png" alt="" />
+            <h3 class="habit_title">Weight Loss</h3>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
