Services Section (custom) Added

--- a/index.html
+++ b/index.html
@@ -98,6 +98,113 @@
           </div>
         </div>
       </section>
+      <section class="run_extra max_width">
+        <div class="run_extra_content">
+          <h2 class="section_heading">Run an Extra <br />Mile Easily</h2>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym. With hundreds of
+            professional workouts.
+          </p>
+          <button class="btn_primary">Join Now</button>
+        </div>
+        <div class="run_extra_img">
+          <img src="./images/run.jpg" alt="run" />
+        </div>
+      </section>
+
+      <!-- Services Section  -->
+      <section class="services_container max_width">
+        <div class="services_heading">
+          <h2 class="section_heading">Our Services</h2>
+          <p>
+            Osed quia consequuntur magni dolores eos qui ratione voluptatem
+            sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
+            dolor sit amet, consectetur, adipisci sed quia non numquam qui
+            ratione voluptatem sequi nesciunt.
+          </p>
+        </div>
+        <div class="services">
+          <div class="service">
+            <div class="service_icon">
+              <img src="./images/runing.png" alt="" />
+            </div>
+            <div class="service_content">
+              <h3>Balance Body mind</h3>
+              <p>
+                Lorem Ipsum is simply my text of the printing and Ipsum is
+                simply text of the Ipsum is simply.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+          <div class="service">
+            <div class="service_icon">
+              <img src="./images/plan.png" alt="" />
+            </div>
+            <div class="service_content">
+              <h3>Nutrition Plan</h3>
+              <p>
+                Lorem Ipsum is simply my text of the printing and Ipsum is
+                simply text of the Ipsum is simply.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+          <div class="service">
+            <div class="service_icon">
+              <img src="./images/dumbbell.png" alt="" />
+            </div>
+            <div class="service_content">
+              <h3>Fitness & Performance</h3>
+              <p>
+                Lorem Ipsum is simply my text of the printing and Ipsum is
+                simply text of the Ipsum is simply.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+          <div class="service">
+            <div class="service_icon">
+              <img src="./images/jogging1.png" alt="" />
+            </div>
+            <div class="service_content">
+              <h3>Routine Programm</h3>
+              <p>
+                Lorem Ipsum is simply my text of the printing and Ipsum is
+                simply text of the Ipsum is simply.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+          <div class="service">
+            <div class="service_icon">
+              <img src="./images/scales.png" alt="" />
+            </div>
+            <div class="service_content">
+              <h3>Weight Loss Program</h3>
+              <p>
+                Lorem Ipsum is simply my text of the printing and Ipsum is
+                simply text of the Ipsum is simply.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+          <div class="service">
+            <div class="service_icon">
+              <img src="./images/cardio.png" alt="" />
+            </div>
+            <div class="service_content">
+              <h3>Cardio Excercise</h3>
+              <p>
+                Lorem Ipsum is simply my text of the printing and Ipsum is
+                simply text of the Ipsum is simply.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
