Trainings Section Added

--- a/index.html
+++ b/index.html
@@ -205,6 +205,43 @@
           </div>
         </div>
       </section>
+       <!-- Training section  -->
+       <section class="training_container max_width">
+        <div class="training_heading">
+          <h2 class="section_heading">Trainings and Exercises</h2>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or <br />access to a gym.
+          </p>
+        </div>
+        <div class="training_gallery">
+          <div class="image_1">
+            <img src="./images/exercise1.jpg" alt="" />
+            <div class="img_overlay"></div>
+            <h4 class="img_text">Lorem ipsum</h4>
+          </div><div class="image_2">
+            <img src="./images/exercise2.png" alt="" />
+            <div class="img_overlay"></div>
+            <h4 class="img_text">Lorem ipsum</h4>
+          </div><div class="image_3">
+            <img src="./images/exercise3.png" alt="" />
+            <div class="img_overlay"></div>
+            <h4 class="img_text">Lorem ipsum</h4>
+          </div><div class="image_4">
+            <img src="./images/exercise4.png" alt="" />
+            <div class="img_overlay"></div>
+            <h4 class="img_text">Lorem ipsum</h4>
+          </div><div class="image_5">
+            <img src="./images/exercise5.jpg" alt="" />
+            <div class="img_overlay"></div>
+            <h4 class="img_text">Lorem ipsum</h4>
+          </div><div class="image_6">
+            <img src="./images/exercise6.jpg" alt="" />
+            <div class="img_overlay"></div>
+            <h4 class="img_text">Lorem ipsum</h4>
+          </div>
+       
+      </section>
     </main>
   </body>
 </html>
