Team Section Added

--- a/index.html
+++ b/index.html
@@ -320,6 +320,64 @@
                   </div>
                 </div>
               </section>
+                <!-- Team Section -->
+      <section class="team max_width">
+        <h2 class="section_heading">Meet Our Team</h2>
+        <p>
+          We believe fitness should be accessible to everyone, everywhere,
+          regardless of income or <br />access to a gym.
+        </p>
+        <div class="team_galary_container">
+          <div class="team_galary">
+            <img src="./images/trainer1.png" alt="" />
+<div class="team_overlay"></div>
+            <div class="team_name">
+              <h3>Jerome Bell</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="team_galary">
+            <img src="./images/trainer2.png" alt="" />
+            <div class="team_overlay"></div>
+            <div class="team_name">
+              <h3>Cameron Williamson</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="team_galary">
+            <img src="./images/trainer3.png" alt="" />
+            <div class="team_overlay"></div>
+            <div class="team_name">
+              <h3>Darrel Steward</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="team_galary">
+            <img src="./images/trainer4.png" alt="" />
+            <div class="team_overlay"></div>
+            <div class="team_name">
+              <h3>Dianne Russell</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="team_galary">
+            <img src="./images/trainer5.png" alt="" />
+            <div class="team_overlay"></div>
+            <div class="team_name">
+              <h3>Cody Fisher</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+          <div class="team_galary">
+            <img src="./images/trainer6.png" alt="" />
+            <div class="team_overlay"></div>
+            <div class="team_name">
+              <h3>Theresa Webb</h3>
+              <p>Trainer</p>
+            </div>
+          </div>
+        </div>
+      </section>
             
     </main>
   </body>
