--- a/index.html
+++ b/index.html
@@ -380,5 +380,34 @@
       </section>
             
     </main>
+    <footer>
+      <div class="footer_content max_width">
+        <div class="footer_logo">
+          <h2>fitness</h2>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym. With hundreds of
+            professional workouts.
+          </p>
+        </div>
+        <div class="footer_nav1">
+          <h3>Get Started</h3>
+          <nav>
+            <a href="">Service</a><a href="">contact us</a
+            ><a href="">Affiliate Program</a><a href="">About us</a>
+          </nav>
+        </div>
+        <div class="footer_nav2">
+          <h3>Get Started</h3>
+          <nav>
+            <a href="">Fitness</a><a href="">platform</a
+            ><a href="">Workout Libary</a><a href="">App Design</a>
+          </nav>
+        </div>
+      </div>
+      <div class="footer_copyright">
+        <p>All right reserved &copy;Fitness 2024</p>
+      </div>
+    </footer>
   </body>
 </html>
