--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
         </div>
         <div class="hero_section">
           <div class="hero_content">
-            <h1>Get body in <br /><span> shape</span> & stay healthy</h1>
+            <h1>Get body in <br /><span> shape</span> & stay<br> healthy</h1>
             <p>
               A huge selection of health and fitness content, healthy recipes
-              <br />and transformation stories to help you get fit and stay fit!
+              and transformation stories to help you get fit and stay fit!
             </p>
-            <button class="btn_primary">Join Club Now</button
-            ><button class="btn_secondary">Download App</button>
+            <button class="btn_primary btn_desktop_join">Join Club Now!</button>
+            <button class="btn_primary btn_mobile_join">Join Now!</button>
+            <button class="btn_secondary">Download App</button>
           </div>
           <div class="hero_img">
             <img src="./images/Images 2.png" alt="" />
@@ -58,6 +59,7 @@
               <p>Free Workout Videos</p>
             </div>
             <div class="video_tutorial">
+              <img class="play_icon" src="./images/play.png" alt="play">
               <div class="square_box"></div>
               <div class="tutorial_text">
                 <h4>350+</h4>
@@ -106,7 +108,7 @@
           <button class="btn_primary">Join Now</button>
         </div>
         <div class="run_extra_img">
-          <img src="./images/run.jpg" alt="run" />
+          <img src="./images/run_f.jpg" alt="run" />
         </div>
       </section>
 
@@ -314,7 +316,7 @@
           Discover the passionate professionals behind our success, dedicated to delivering <br>exceptional results.
         </p>
         <div class="team_galary_container">
-          <div class="team_galary">
+          <div class="team_galary galary_img_1">
             <img src="./images/trainer1.png" alt="" />
 <div class="team_overlay"></div>
             <div class="team_name">
@@ -322,7 +324,7 @@
               <p>Trainer</p>
             </div>
           </div>
-          <div class="team_galary">
+          <div class="team_galary galary_img_2">
             <img src="./images/trainer2.png" alt="" />
             <div class="team_overlay"></div>
             <div class="team_name">
@@ -330,7 +332,7 @@
               <p>Trainer</p>
             </div>
           </div>
-          <div class="team_galary">
+          <div class="team_galary galary_img_3">
             <img src="./images/trainer3.png" alt="" />
             <div class="team_overlay"></div>
             <div class="team_name">
@@ -338,7 +340,7 @@
               <p>Trainer</p>
             </div>
           </div>
-          <div class="team_galary">
+          <div class="team_galary galary_img_4">
             <img src="./images/trainer4.png" alt="" />
             <div class="team_overlay"></div>
             <div class="team_name">
@@ -346,7 +348,7 @@
               <p>Trainer</p>
             </div>
           </div>
-          <div class="team_galary">
+          <div class="team_galary galary_img_5">
             <img src="./images/trainer5.png" alt="" />
             <div class="team_overlay"></div>
             <div class="team_name">
@@ -354,7 +356,7 @@
               <p>Trainer</p>
             </div>
           </div>
-          <div class="team_galary">
+          <div class="team_galary galary_img_6">
             <img src="./images/trainer6.png" alt="" />
             <div class="team_overlay"></div>
             <div class="team_name">
